examples/errors/14_assign_string_to_int/assign_string_to_int.txy
proc main()
    println("=================== PROBLEMA 01 ===================");
    var y: double = 21d;
    var x: double = 18d;
    var c: int = "5";
    var result: double = (x ** 2d) - y + double(c);
    println(format("Resultado: %double", result));
endproc;
